# bubblesort

./: CMakeCache.txt  CMakeLists.txt  Makefile  Unbenanntes Diagramm.drawio  Untitled Diagram.drawio  anforderungsmanagment.drawio  cmake_install.cmake  tags  ueb05Naji  ueb05Naji.cbp
header/: database.h  datastructure.h  datetime.h  list.h  menu.h  sort.h  teams.h  tools.h
src/: database.c  datetime.c  list.c  little_teams.xml  main.c  menu.c  sort.c  teams.c  tools.c
src/xml/: save_teams.xml
